# quick-media-organizer

./: .gitignore  LICENSE  README.es.md  README.md  package-lock.json  package.json  vite.config.js
.cursor/rules/: git-release.mdc
.github/workflows/: ci.yml  release.yml
docs/screenshots/: .gitkeep
logs/: README.md
scripts/: capture-screenshots.mjs
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  error_log.rs  fs_util.rs  lib.rs  main.rs  media.rs  models.rs  path_util.rs  rename.rs  session.rs  state.rs  video.rs
src/lib/: errorReporter.ts  i18n.ts  links.ts  screenshotDemo.ts  shortcuts.ts  types.ts  utils.ts
src/lib/components/: FolderPicker.svelte  HelpOverlay.svelte  Kbd.svelte  MetadataPanel.svelte  OptionsPanel.svelte  PhotoViewer.svelte  RenameInput.svelte  ShortcutBar.svelte  SupportBlock.svelte  Toast.svelte  VideoTrimPanel.svelte  WelcomeScreen.svelte
src/routes/: +page.svelte
