[package]
name = "quick-media-organizer"
version = "0.1.3"
description = "Organize photo and video folders quickly with keyboard shortcuts"
authors = ["Ferran Vidal Bellés"]
edition = "2021"

[lib]
name = "quick_media_organizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
filetime = "0.2"
kamadak-exif = "0.6"
walkdir = "2"
